# data_generation_global_retailer

./: .gitignore  README.md  dev-requirements.txt  fakedata.py  find_nans.py  pyproject.toml  rmv_chrs.py  test_faker_data.py
data_generation.egg-info/: PKG-INFO  SOURCES.txt
faker_data.egg-info/: top_level.txt
output/data/: .~lock.fake_data_ 2026_01_22 12:46:28 .csv#  .~lock.fake_data_ 2026_01_22 12:51:57 .csv#  .~lock.fake_data_ CA _ 2026_01_22 12:57:20 .csv#  .~lock.fake_data_ GB _ 2026_01_22 12:58:02 .csv#  fake_data_ 2026_01_22 12:46:28 .csv  fake_data_ CA _ 2026_01_22 12:57:20 .csv  fake_data_ GB _ 2026_01_22 12:58:02 .csv  fake_data_ US _ 2026_01_22 12:59:20 .csv  fake_data_US_2026_01_22 13:42:12.csv
src/data_generation/: __main__.py  customer_fakedata.py
src/data_generation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/data_generation/customers/: customer_fakedata.py
src/data_generation/shared/: currency.py  logger.py  paths.py
src/data_generation/verticals/retail/: retail_product_fakedata.py
src/data_generation/verticals/retail/catalog/: retail_products.toml
tests/: test_customer_fakedata.py  test_faker_data.py
