[project]
name = "data_generation"
version = "1.0.0"
description = "" #TODO: Add a short description of your package
authors = [{name = "Your Name", email = "your@email.com"}] #TODO: Add your name and email
requires-python = ">=3.11"
dynamic = ["optional-dependencies"]
dependencies = [
    "dateparser==1.2.2",
    "faker==40.1.2",
    "iniconfig==2.3.0",
    "numpy==2.4.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "regex==2026.1.15",
    "setuptools==80.9.0",
    "six==1.17.0",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "wheel==0.45.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
optional-dependencies = {dev = {file = ["dev-requirements.txt"]}} # add packages for development in the dev-requirements.txt file

[project.scripts]
# TODO: add your CLI entry points here




