[project]
name = "data_generation"
version = "1.0.0"
description = "" #TODO: Add a short description of your package
authors = [{name = "Your Name", email = "your@email.com"}] #TODO: Add your name and email
requires-python = ">=3.14"
dynamic = ["optional-dependencies"]
dependencies = [
    "dateparser>=1.2",
    "faker>=40.0",
    "numpy>=2.4",
    "pandas>=2.3",
    "geonames-addr",
    "pycountry-convert>=0.7.2",
    "babel>=2.18.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pygments>=2.19",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
geonames-addr = {path = "../demo_data/geonames_addr", editable = true}

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
# TODO: add your CLI entry points here
customer_fakedata   = "data_generation.customers.customer_fakedata:main"
retail_products     = "data_generation.verticals.retail.retail_product_fakedata:main"

[toolsetuptools.packages.find]
where = ["src"]



